--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "Select 5th Option",
+    "name": "AUTOFEEDBACK",
     "version": "1.1",
     "description": "Automatically check the input in the 5th option of all containers.",
     "permissions": ["scripting", "activeTab"],
